# igvc-perception

./: .gitignore  README.md  performance_data.csv  segmentation_infer.py  segmentation_train.py
igvc-annotated/: Train.txt  Validation.txt  data.yaml
igvc-annotated/data/labels/: Train.cache  Validation.cache
igvc-annotated/data/labels/Train/: image_000092.txt  image_000092_mod.txt  image_000114.txt  image_000114_mod.txt  image_000139.txt  image_000139_mod.txt  image_000200.txt  image_000200_mod.txt  image_000264.txt  image_000264_mod.txt  image_000284.txt  image_000284_mod.txt  image_000324.txt  image_000324_mod.txt  image_000367.txt  image_000367_mod.txt  image_000383.txt  image_000383_mod.txt  image_000399.txt  image_000399_mod.txt  image_000405.txt  image_000405_mod.txt  image_000415.txt  image_000415_mod.txt  image_000418.txt  image_000418_mod.txt  image_000441.txt  image_000441_mod.txt  image_000456.txt  image_000456_mod.txt  image_000465.txt  image_000465_mod.txt  image_000473.txt  image_000473_mod.txt  image_000518.txt  image_000518_mod.txt  image_000523.txt  image_000523_mod.txt  image_000563.txt  image_000563_mod.txt  (+110 more)
igvc-annotated/data/labels/Validation/: image_000007.txt  image_000112.txt  image_000157.txt  image_000203.txt  image_000227.txt  image_000368.txt  image_000412.txt  image_000433.txt  image_000466.txt  image_000497.txt  image_000537.txt  image_000597.txt  image_000628.txt  image_000663.txt  image_000686.txt  image_000687.txt  image_000689.txt  image_000693.txt  image_000701.txt  image_000703.txt  image_000723.txt  image_000725.txt  image_000733.txt  image_000736.txt  image_000757.txt  image_000758.txt  image_000777.txt  image_000779.txt  image_000792.txt  image_000797.txt  image_000799.txt  image_000813.txt  image_000831.txt  image_000832.txt  image_000838.txt  image_000839.txt  image_000842.txt  image_000853.txt  image_000867.txt  image_000888.txt  (+10 more)
ros/igvc_perception/: CMakeLists.txt  package.xml
ros/igvc_perception/cfg/: CameraProcessing.cfg  GnssEkfNode.cfg
ros/igvc_perception/include/igvc_perception/: CameraProcessing.hpp  GnssEkfNode.hpp  PinholeGeometry.hpp
ros/igvc_perception/launch/: start_system.launch
ros/igvc_perception/rviz/: sensor_viz.rviz
ros/igvc_perception/src/: CameraProcessing.cpp  GnssEkfNode.cpp  PinholeGeometry.cpp  camera_processing_node.cpp  gnss_ekf_node.cpp
ros/igvc_perception/urdf/: mantis.urdf
ros/igvc_perception/yaml/: global_costmap_params.yaml  local_costmap_params.yaml
runs/segment/train29/: args.yaml  results.csv
