<?xml version="1.0"?>
<package format="2">
  <name>igvc_perception</name>
  <version>1.0.0</version>
  <description>
    IGVC Perception Project
    https://github.com/mabowers/igvc-perception
    ECE5532 Autonomous Vehicle Systems I, Winter 2025
    Oakland University, Rochester, MI
    Instructor: Dr. Micho Radovnikovich
  </description>
  <url type="repository">https://github.com/mabowers/igvc-perception</url>
  <maintainer email="noreply@example.com">Mark A. Bowers</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>tf2_ros</depend>
  <depend>image_geometry</depend>

</package>
